--- a/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
@@ -1,5 +1,5 @@
 # This workflow will install Python dependencies and run tests on expected user platforms
-name: Testing
+name: Testing on user machines
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e .[test]
+        python -m pip install -e '.[test]'
     - name: Run tests
       run: pytest --pyargs {{cookiecutter.__package_name}} --cov {{cookiecutter.__package_name}}
       env:
