--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e cookiecutter
+        python -m pip install --upgrade cookiecutter
     - name: Render the package
       run: |
         cookiecutter . --no-input
