--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade cookiecutter
+        python -m pip install --upgrade jinja2
     - name: Render the package
       run: |
         cookiecutter . --no-input
