--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,5 +1,5 @@
 # This workflow will install Python dependencies, run tests, run linting, and test building docs
-name: Codestyle and Linting
+name: Rendering template test
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade cookiecutter
-        python -m pip install --upgrade jinja2
+        python -m pip install --upgrade jinja2-time
     - name: Render the package
       run: |
         cookiecutter . --no-input
