--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,12 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# jupyter notebooks should not be added to Python Packages
+*.ipynb
+
+*.bin
+_version.py
+
+*.csv
+*.fits
