--- a/{{cookiecutter.__package_name}}/.github/workflows/codestyle.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/codestyle.yml
@@ -1,43 +1,10 @@
-# This workflow will install Python dependencies and check codestyle
-name: Codestyle and Linting
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+name: Codestyle and linting with Ruff
+on: [ push, pull_request ]
 jobs:
-  build:
-    #{% raw %}
-    runs-on: ${{ matrix.platform }}
-    #{% endraw %}
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [ubuntu-latest]
-        python-version: ["{{ cookiecutter.minimum_python_version }}"]
-
+  ruff:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      #{% raw %}
-    - name: Set up Python ${{ matrix.python-version }}
-      #{% endraw %}
-      uses: actions/setup-python@v2
-      with:
-        #{% raw %}
-        python-version: ${{ matrix.python-version }}
-        #{% endraw %}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e .[dev]
-    - name: Lint with Black
-      run: |
-        black --check --diff {{cookiecutter.__package_name}}
-    - name: flake8
-      run: |
-        flake8 --count {{cookiecutter.__package_name}}
-
-
+      - uses: actions/checkout@v4
+      - uses: astral-sh/ruff-action@v3
+      - run: ruff check --fix
+      - run: ruff format
