--- a/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
@@ -17,14 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: {% if cookiecutter.minimum_python_version == "3.8" -%}[3.8, 3.9, '3.10', '3.11']{% elif cookiecutter.minimum_python_version == "3.9" %}[3.9, '3.10', '3.11']{% elif cookiecutter.minimum_python_version == "3.10" %}['3.10', '3.11']{% elif cookiecutter.minimum_python_version == "3.11" %}["3.11"]{% endif %}
+        python-version: {% if cookiecutter.minimum_python_version == "3.9" %}[3.9, '3.10', '3.11', '3.12', '3.13', '3.14']{% elif cookiecutter.minimum_python_version == "3.10" %}['3.10', '3.11', '3.12', '3.13', '3.14']{% elif cookiecutter.minimum_python_version == "3.11" %}["3.11", "3.12", "3.13", "3.14"]{% endif %}
 
     steps:
     - uses: actions/checkout@v2
       #{% raw %}
     - name: Set up Python ${{ matrix.python-version }}
       #{% endraw %}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         #{% raw %}
         python-version: ${{ matrix.python-version }}
