--- a/{{cookiecutter.__package_name}}/pyproject.toml
+++ b/{{cookiecutter.__package_name}}/pyproject.toml
@@ -31,13 +31,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-  'coverage>=5.0.3',
-  'pytest',
-  'pytest-astropy',
-  'pytest-cov',
-  'black',
-  'flake8',
-  'coverage[toml]'
+  "{{cookiecutter.__package_name}}[docs,test,style]"
 ]
 
 docs = [
@@ -52,10 +46,7 @@ test = [
   'coverage[toml]'
 ]
 
-style = [
-  'black',
-  'flake8'
-]
+style = ['ruff']
 
 [tool.setuptools.package-data]
 "{{cookiecutter.__package_name}}.data" = ["**"]
