--- a/{{cookiecutter.__package_name}}/.github/workflows/test_in_container.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/test_in_container.yml
@@ -23,8 +23,7 @@ jobs:
       run: pytest --pyargs {{cookiecutter.__package_name}} --cov {{cookiecutter.__package_name}}
       env:
         PLATFORM: 'docker'
-    - name: Upload test results to Codecov
-      if: ${{ !cancelled() }}
-      uses: codecov/test-results-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4
+      env: 
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
