--- a/{{cookiecutter.__package_name}}/.github/workflows/test_in_container.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/test_in_container.yml
@@ -26,4 +26,6 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
       env: 
+        #{% raw %}
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        #{% endraw %}
