--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,6 +35,8 @@ jobs:
       working-directory: ./swx_weather
       run: |
         python -m pip install -e .[dev]
+      env: 
+        SETUPTOOLS_SCM_PRETEND_VERSION=: "1.0.0"
     - name: Run tests for rendered package
       working-directory: ./swx_weather
       run: pytest
