--- a/{{cookiecutter.__package_name}}/pyproject.toml
+++ b/{{cookiecutter.__package_name}}/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
   'astropy>=4.1.0',
   'numpy>=1.16.0',
+  'swxsoc @ git+https://github.com/swxsoc/swxsoc.git@main',
 ]
 
 [project.optional-dependencies]
