--- a/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
+++ b/{{cookiecutter.__package_name}}/.github/workflows/testing.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: {% if cookiecutter.minimum_python_version == "3.9" %}[3.9, '3.10', '3.11', '3.12', '3.13', '3.14']{% elif cookiecutter.minimum_python_version == "3.10" %}['3.10', '3.11', '3.12', '3.13', '3.14']{% elif cookiecutter.minimum_python_version == "3.11" %}["3.11", "3.12", "3.13", "3.14"]{% endif %}
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
 
     steps:
     - uses: actions/checkout@v2
