Add Docs Test to Template

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,3 +40,6 @@ jobs:
     - name: Run tests for rendered package
       working-directory: ./swx_weather
       run: pytest
+    - name: Build docs
+      working-directory: ./swx_weather/docs
+      run: make html
